# bootcamp_python_aula08

./: README.md  dados.csv  dados.parquet  etl.py  etl_test.py  pipeline.py  pyproject.toml  test_etl.py
